--- a/DemoDotNetCoreBackend/DemoDotNetCoreBackend.csproj
+++ b/DemoDotNetCoreBackend/DemoDotNetCoreBackend.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NLog" Version="5.3.4" />
+        <PackageReference Include="NLog.Config" Version="4.7.15" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.15" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.15" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
